crates/selene-algorithms/tests/snapshots/algo_snapshot_corpus__corpus_snapshots_match@structural_articulation_points_two_triangles_bridge.snap
---
source: crates/selene-algorithms/tests/algo_snapshot_corpus.rs
expression: snapshot.to_string()
---
GRAPH { fixture: "two-triangles-bridge", nodes: 6, edges: 14 }
INVOCATION { algorithm: "articulation_points", params: "" }
RESULT
  n2
  n3
