crates/selene-algorithms/tests/snapshots/algo_snapshot_corpus__corpus_snapshots_match@structural_scc_count_chain_4.snap
---
source: crates/selene-algorithms/tests/algo_snapshot_corpus.rs
expression: snapshot.to_string()
---
GRAPH { fixture: "chain-4", nodes: 4, edges: 3 }
INVOCATION { algorithm: "scc_count", params: "" }
RESULT COUNT 4
