crates/selene-algorithms/tests/snapshots/algo_snapshot_corpus__corpus_snapshots_match@structural_scc_k3_cycle.snap
---
source: crates/selene-algorithms/tests/algo_snapshot_corpus.rs
expression: snapshot.to_string()
---
GRAPH { fixture: "k3-directed-cycle", nodes: 3, edges: 3 }
INVOCATION { algorithm: "scc", params: "" }
RESULT
  n0 -> label=1
  n1 -> label=1
  n2 -> label=1
