crates/selene-algorithms/tests/snapshots/algo_snapshot_corpus__corpus_snapshots_match@structural_wcc_count_chain_5.snap
---
source: crates/selene-algorithms/tests/algo_snapshot_corpus.rs
expression: snapshot.to_string()
---
GRAPH { fixture: "chain-5", nodes: 5, edges: 4 }
INVOCATION { algorithm: "wcc_count", params: "" }
RESULT COUNT 1
