crates/selene-algorithms/tests/snapshots/algo_snapshot_corpus__corpus_snapshots_match@structural_wcc_two_triangles_bridge.snap
---
source: crates/selene-algorithms/tests/algo_snapshot_corpus.rs
expression: snapshot.to_string()
---
GRAPH { fixture: "two-triangles-bridge", nodes: 6, edges: 14 }
INVOCATION { algorithm: "wcc", params: "" }
RESULT
  n0 -> label=1
  n1 -> label=1
  n2 -> label=1
  n3 -> label=1
  n4 -> label=1
  n5 -> label=1
